ajustes aws kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,10 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.data.r2dbc.repositories.enabled=true
 
+cloud.aws.region.auto = false
+cloud.aws.region.static=us-east-1
+cloud.aws.stack.auto=false
+aws.access.key=LKIAQAAAAAAAJ3BIOYYH
+aws.secret.key=LO4nPi/JQFqDJ1a5oM8zJ4ZNnoU5VD38ivYN7OVm
+aws.service-endpoint=http://localhost:4566
+
